# Kaleidoscope

./: .editorconfig  .gitignore  1.json  API-todo.md  API.md  LICENSE  Makefile  QUICK_START.md  README.md  README.zh-CN.md  docker-compose.yml
backend/: .env.example  AUTO_INGEST_README.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_SUMMARY.md  LOCAL_RAG_IMPROVEMENTS.md  README.md  START_BACKGROUND_PROCESSING.md  alembic.ini  celerybeat-schedule.db  pyproject.toml  pytest.ini  start-celery.sh  test_local_rag.py  verify_deployment.py
backend/alembic/: env.py
backend/alembic/versions/: 08b6f9cddb0a_add_deep_analysis_to_papers.py  0f9e8d7c6b5a_merge_user_preferences_and_collection_heads.py  625357ed3fc8_initial_p0_schema.py  6822affdb236_add_title_zh_and_abstract_zh_to_papers.py  9a0b1c2d3e4f_add_api_keys.py  a0b1c2d3e4f6_add_collaboration_experiment_tables.py  a1b2c3d4e5f6_p1_p2_schema_additions.py  a3b4c5d6e7f8_add_user_preferences.py  a9b0c1d2e3f4_add_overview_image_to_papers.py  b0c1d2e3f4a5_add_deep_analysis_zh_to_papers.py  b1c2d3e4f5a6_add_ragflow_document_mappings.py  b2c3d4e5f6a7_p3_schema_additions.py  c1d2e3f4a5b6_add_paper_links_to_papers.py  c3d4e5f6a7b8_add_markdown_content.py  d2e3f4a5b6c7_add_openalex_searches.py  d4e5f6a7b8c9_add_users_table.py  e3f4a5b6c7d8_add_paper_qa_tables.py  e5f6a7b8c9d0_add_paper_labels.py  f6a7b8c9d0e1_add_writing_documents.py  f7a8b9c0d1e2_add_collection_kinds_and_group_chat.py
backend/app/: __init__.py  auth.py  config.py  dependencies.py  exceptions.py  main.py  permissions.py  worker.py
backend/app/clients/: __init__.py  arxiv.py  crossref.py  llm_client.py  openalex.py  (+5 more)
backend/benchmarks/: gold_corpus.json
backend/docker/: Dockerfile  check-postgres-target.sh  docker-compose.yml
backend/tests/: conftest.py  test_analysis_extensions_services.py  test_analytics_module.py  test_backend_regressions.py  test_governance_quality_services.py  test_ragflow_integration.py
(+405 files in other folders)
