[project]
name = "kaleidoscope-backend"
version = "0.1.0"
description = "Kaleidoscope - Academic Paper Intelligence Platform"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "greenlet>=3.1.0",
    # Caching & Queue
    "redis>=5.2.0",
    "celery[redis]>=5.4.0",
    # HTTP client
    "httpx>=0.28.0",
    # Configuration
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    # Logging
    "structlog>=24.4.0",
    # RSS parsing
    "feedparser>=6.0.0",
    # Search
    "meilisearch>=0.31.0",
    "qdrant-client>=1.12.0",
    # Graph DB
    "neo4j>=5.27.0",
    # Object storage
    "minio>=7.2.0",
    # PDF parsing
    "lxml>=5.3.0",
    # Text similarity
    "rapidfuzz>=3.10.0",
    # DOI utilities
    "idutils>=1.2.0",
    # Embedding (optional: install separately for GPU)
    "sentence-transformers>=3.3.0",
    # File uploads
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "httpx",  # For FastAPI TestClient
]
ml = [
    # Topic clustering (WS-2) — optional, heavy dependency
    "bertopic>=0.16.0",
    "hdbscan>=0.8.33",
    "umap-learn>=0.5.0",
]

[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
